--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
     <h1>Odin Recipes</h1>
 
-    <p>tes</p>
-    
     <!-- put all th elink on unordered lists -->
-    <a href="https://www.allrecipes.com/recipe/23600/worlds-best-lasagna/">Best Lasagna</a>
-    <a href="https://www.allrecipes.com/recipe/8499/basic-chicken-salad/">Chicken Salad</a>
-    <a href="https://www.allrecipes.com/recipe/86587/scrambled-eggs-done-right/">Scrambled Eggs</a>
-    
+    <ul>
+        <li> <a href="https://www.allrecipes.com/recipe/23600/worlds-best-lasagna/" target="_blank">Best Lasagna</a></li>
+        <li> <a href="https://www.allrecipes.com/recipe/8499/basic-chicken-salad/" target="_blank">Chicken Salad</a></li>
+        <li> <a href="https://www.allrecipes.com/recipe/86587/scrambled-eggs-done-right/" target="_blank">Scrambled Eggs</a></li>
+    </ul>
+   
 </body>
 </html>
