--- a/index.html
+++ b/index.html
@@ -21,27 +21,13 @@
         <!-- put all the link on unordered lists -->
         <ul>
           <li>
-            <a
-              href="https://www.allrecipes.com/recipe/23600/worlds-best-lasagna/"
-              target="_blank"
-              >Best Lasagna</a
-            >
+            <a href="recipes/best-lasagna.html" target="_blank">Best Lasagna</a>
           </li>
           <li>
-            <a
-              href="https://www.allrecipes.com/recipe/8499/basic-chicken-salad/"
-              target="_blank"
+            <a href="recipes/chicken-salad.html" target="_blank"
               >Chicken Salad</a
             >
           </li>
-          <li>
-            <a
-              href="https://www.allrecipes.com/recipe/86587/scrambled-eggs-done-right/"
-              target="_blank"
-              >Scrambled Eggs</a
-            >
-          </li>
-
           <li>
             <a href="recipes/scrambled-eggs.html" target="_blank"
               >Scrambled Eggs</a
